# django-drf-custom-id-object-field

./: .gitignore  pyproject.toml
bookstore/: models.py  serializers.py  views.py
bookstore/migrations/: 0001_initial.py
core/: settings.py  urls.py
