[tool.poetry]
name = "django-drf-custom-relationship"
version = "0.1.0"
description = "An example Django DRF app implementing a custom relationship field"
authors = ["Chris Muthig <camuthig@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
